crates/puffin-cli/tests/snapshots/pip_uninstall__invalid_requirement.snap
---
source: crates/puffin-cli/tests/pip_uninstall.rs
info:
  program: puffin
  args:
    - pip-uninstall
    - flask==1.0.x
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: Failed to parse `flask==1.0.x`
  Caused by: Version specifier `==1.0.x` doesn't match PEP 440 rules
flask==1.0.x
     ^^^^^^^

